add employee transfer functionality: implement methods for transferring employees between departments, teams, and positions, including history logging and chat group management